--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .container {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +9,11 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fruit {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
+  cursor: pointer;
+  z-index: 12;
 }
